--- a/src/components/Socials/style.css
+++ b/src/components/Socials/style.css
@@ -18,32 +18,34 @@ body {
 }
 
 .neo-button {
-	width: 100px;
-    height: 45px;
-	cursor: pointer;
-	background: #ecf1f0;
-	border: none;
-	border-radius: 8px;
-	box-shadow: 0px 10px 25px #eff1f1, 0px -10px 25px #ecf0f0, inset 0px -5px 10px #e8eaea, inset 0px 5px 10px #fdffff;
-	color: rgb(147, 147, 147);
-	transition: 500ms;
+    position: center;
+    text-decoration: none;
+    padding: 0px 0px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 500;
+    letter-spacing: 2px;
+    color: #5a84a2;
+    font-size: 12px;
+    border-radius: 40px;
+    box-shadow: -2px -2px 8px rgba(255, 255, 255, 1),
+        -2px -2px 12px rgba(255, 255, 255, 0.5),
+        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+        2px 2px 8px rgba(0, 0, 0, 0.15);
 }
 
 
 .neo-button:hover {
-    width: 100px;
-    height: 45px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    color: rgb(190, 191, 195);
-    border-radius: 8px;
-    background: linear-gradient(145deg, #ffffff, #eff1f1);
-    box-shadow: 6px 6px 13px #ffffff, -6px -6px 13px #e7e5e5
+    
+    box-shadow: inset -2px -2px 8px rgba(255, 255, 255, 1),
+        inset -2px -2px 12px rgba(255, 255, 255, 0.5),
+        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+        inset 2px 2px 8px rgba(0, 0, 0, 0.15);
 }
 
-
 .neo-button .fa {
+    flex-wrap: wrap;
+    justify-content: center;
     color: rgb(213, 213, 219)
 }
 
