--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+@import url(https://fonts.googleapis.com/css?family=Calibri:400,300,700);
+
 .App {
   text-align: center;
+  width: 100%;
+  margin: 10px;
+  padding: 10px;
+  
 }
 
 .App-logo {
@@ -38,7 +44,7 @@
 }
 
 .App {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 * {
   box-sizing: border-box;
@@ -46,9 +52,10 @@
 html, body, #app, #app>div {
   height: 100%;
 
-  background-color: #F5F5F5;
-  margin: 0;
-  padding: 10px;
+
+  margin: 0px;
+
+
 }
 
 .contact {
@@ -60,26 +67,29 @@ html, body, #app, #app>div {
 }
 .container {
   width: 100%;
-  padding: 10px 10px 10px 10px;
+  padding: 20px 20px 20px 20px;
   flex-wrap: wrap;
   justify-content: center;
 }
 
 html {
   height: 100%;
-  background-color: #f5f5f5;
-  font-family: 'Montserrat', sans-serif;
+  background-color: #fbfafa;
+  font-family: 'Lato', sans-serif;
 
 }
 
 body-part {
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 10px;
+  margin: 10px;
 }
 
 .row {
   width: 100%;
-  margin: 0 auto;
+  margin: 20 auto;
+  padding: 20px;
 }
 
 .col-md {
@@ -100,12 +110,6 @@ body-part {
 }
 
 
-.mobile-title {
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: 45px;
-    letter-spacing: 8px;
-    display: none;
-}
 
 .alignCenter {
     text-align: center;
@@ -156,6 +160,7 @@ body-part {
     .col-md {
         width: 100%;
         padding: 20px;
+        margin: 10px
     }
 
 
