--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -9,7 +9,7 @@ img {
     max-height: 250px;
     align-items: center;
 justify-content: center;
-padding: 20px;
+padding: 5px;
 } 
 
 .row img  {
@@ -47,22 +47,29 @@ justify-content: center;
 
 .aboot {
     flex-wrap: wrap;
+    padding: 15px;
     justify-content: center;
-    border-radius: 11px;
-    background: linear-gradient(145deg, #ebedee, #d7e1e6);
-    box-shadow: inset 6px 6px 13px #e4e2e2, inset -6px -6px 13px #f3f5f5;
+    box-shadow: 3px 6px 13px #e4e4e4, -6px -6px 20px #fbfbfb;
+    border-radius: 12px;
 }
 
 
 .boxy {
-    position: relative;
+    position: center;
+}
+
+#res {
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .pad a {
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     padding: 5px;
-    margin: 20px;
+    margin: 10px;
     width: 100px;
 }
 
@@ -70,7 +77,7 @@ justify-content: center;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 5px;
-    margin: 20px;
+    margin: 10px;
     width: 100px;
 }
 
@@ -88,7 +95,7 @@ justify-content: center;
 
 viewThree col-md {
       align-items: center;
-      max-width: 90%;
+      max-width: 100%;
   }
 
 .about h3 {
@@ -129,7 +136,7 @@ viewThree col-md {
     cursor: pointer;
     border: none;
     outline: none;
-    border-radius: 11px;
+
 
     box-shadow: 6px 6px 13px #e1e1e4, -6px -6px 13px #e7e6e6
 }
