--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,13 +1,109 @@
 header {
-    background: linear-gradient(145deg, #efe9e99b, #ffffff);
-    box-shadow: 6px 6px 13px #f0f0f3, -3px -3px 13px #e6dfdf
+    background: linear-gradient(145deg, #ffffffd4, #ffffff);
+    opacity: .8;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-image: url("../../img/cloud.jpg");
 }
 
 #hero {
-    flex-wrap: wrap;
-    justify-content: center;
-    background-image: url("../../img/hero4.png");
-    background-size: fit;
-    height: 400px;
+
+    background-size: cover;
+    
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 500px;
+
+      
 }
+
+html, body >div {
+    height: 100%;
+  
+    background-color: #fffefe;
+    margin: 0px;
+
+
+  }
+
+  button {
+    margin: 20px;
+    outline: none;
+    border-radius: 13px;
+  }
+  .custom-btn {
+    width: 130px;
+    height: 40px;
+    padding: 10px 25px;
+    border: 2px solid #000;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    border-radius: 13px;
+    transition: all 0.3s ease;
+    position: relative;
+    background: linear-gradient(145deg, #f0f1f1, #f6f7f8);
+    display: inline-block;
+  margin: 20px;
+  outline: none;
+}
+
+  .btn-7 {
+    background: #000;
+   color: #fff;
+   line-height: 42px;
+   padding: 0;
+   border: none;
+   z-index: 1;
+   position: center;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 2px;
+    color: #f0f1f1;
+    border-radius: 10px;
+    font-size: 20px;
+    -webkit-transition: all 0.3s linear;
+     transition: all 0.3s linear;
+ }
+ .btn-7:hover {
+   background: transparent;
+   color: #000;
+ }
+ .btn-7:before,
+ .btn-7:after {
+   position: absolute;
+   content: "";
+   left: 0;
+   width: 100%;
+   height: 50%;
+   right: 0;
+   z-index: -1;
+   background: #000;
+   transition: all 0.3s ease;
+ }
+ .btn-7:before {
+   top: 0;
+ }
+ .btn-7:after {
+   bottom: 0;
+ }
+ .btn-7:hover:before,
+ .btn-7:hover:after {
+   height: 0;
+   background-color: #000;
+ }
+ 
+ 
+  
+
+h1 {
+    letter-spacing: 2px;
+    font-weight: 500;
+}
+
 
