--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -4,10 +4,13 @@ grid-container {
     flex-wrap: wrap;
     justify-content: center;
     background-color: #d8d5d5;
+    height: 400px;
 }
 .container {
     flex-wrap: wrap;
     justify-content: center;
+    background-color:rgb(250, 250, 250);
+    background-size: cover;
     width: 90%;
 }
 
@@ -28,6 +31,9 @@ grid-container {
 
 }
 
+#projs {
+    height: 500px;
+}
 .col 
 
     {
@@ -55,9 +61,8 @@ proj img {
     cursor: pointer;
     border: none;
     outline: none;
-    border-radius: 11px;
-    background: linear-gradient(145deg, #f5f7fa, #f6fafa);
-    box-shadow: 6px 6px 13px #f4f4f7, -6px -6px 13px #f1ebeb
+
+
 }
 
 
@@ -133,6 +138,7 @@ ul {
     border-radius: 11px;
 }
 
+
 .container card {
     background-color: #c7cece;
 }
@@ -148,38 +154,6 @@ p {
 }
 
 
-/* CSS */
-.button-67 {
-  align-items: center;
-  background: #f5f5fa;
-  border: 0;
-  border-radius: 8px;
-  box-shadow: -10px -10px 30px 0 #fff,10px 10px 30px 0 #1d0dca17;
-  box-sizing: border-box;
-  color: #2a1f62;
-  cursor: pointer;
-  display: flex;
-  font-family: "Cascadia Code",Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;
-  font-size: 1rem;
-  justify-content: center;
-  line-height: 1.5rem;
-  padding: 15px;
-  position: relative;
-  text-align: left;
-  transition: .2s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: pre;
-  width: max-content;
-  word-break: normal;
-  word-spacing: normal;
-}
-
-.button-67:hover {
-  background: #f8f8ff;
-  box-shadow: -15px -15px 30px 0 #fff, 15px 15px 30px 0 #1d0dca17;
-}
 
 @media (min-width: 768px) {
   .button-67 {
