--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,6 +1,6 @@
 header {
     background: linear-gradient(145deg, #ffffffd4, #ffffff);
-    opacity: .8;
+
     width: 100%;
     height: 1200px;
     flex-wrap: wrap;
@@ -23,13 +23,14 @@ header {
 
 html, body >div {
     height: 100%;
-    flex-wrap: wrap;
-    align-items: center;
+  
     background-color: #fffefe;
     margin: 0px;
 
 
   }
+
+
 
   button {
     margin: 20px;
@@ -107,6 +108,47 @@ html, body >div {
 h1 {
     letter-spacing: 2px;
     font-weight: 500;
+}
+
+#head  {
+  margin-top: 25px;
+  font-size: 21px;
+  text-align: center;
+
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 2s; /* Firefox < 16 */
+      -ms-animation: fadein 2s; /* Internet Explorer */
+       -o-animation: fadein 2s; /* Opera < 12.1 */
+          animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
 
