--- a/src/components/Navigation/style.css
+++ b/src/components/Navigation/style.css
@@ -1,3 +1,49 @@
 #pages {
     opacity: .7;
 }
+
+#proj {
+    width: 100px;
+    height: 100px;
+}
+
+#fade {
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in-out;
+	animation-duration: 1s;
+}
+
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+#opa {
+    opacity: .95;
+    transition: all .2s ease-in-out; 
+}
+
+#opa:hover {
+    transform: scale(1.05); 
+}
+
+#zing {
+    width: 100px;
+    height: 100px;
+    padding: 5px;
+    border-radius: 100px;
+    
+}
+
+#title {
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: 500;
+}
