--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -1,17 +1,21 @@
 @import url(https://fonts.googleapis.com/css?family=Calibri:400,300,700);
 
 grid-container {
-    flex-wrap: wrap;
-    justify-content: center;
+   
     background-color: #d8d5d5;
-    height: 400px;
-}
-.container {
+    
     flex-wrap: wrap;
     justify-content: center;
-    background-color:rgb(250, 250, 250);
-    background-size: cover;
-    width: 90%;
+    align-items: center;
+}
+#contain {
+    flex-wrap: wrap;
+    justify-content: center;
+
+    background-size: contain;
+    align-items: center;
+    min-height: 100vh;
+  min-width: 100vw;
 }
 
 .neo-button repoLink {
@@ -32,7 +36,9 @@ grid-container {
 }
 
 #projs {
-    height: 500px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 .col 
 
@@ -79,8 +85,7 @@ proj img {
 }
 
 .row > div {
-    flex-basis: 27%; /* or - flex: 0 50% - or - flex-basis: 50% - */
-    /*demo*/
+    
  
     
   justify-content: center;
@@ -131,16 +136,25 @@ proj img {
 
 
 ul {
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     padding: 0px;
 }
 
 .proj {
     border-radius: 11px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 
 .container card {
     background-color: #c7cece;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 p {
@@ -148,7 +162,7 @@ p {
     padding: 3px;
 }
 
-.container row col {
+row  {
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -160,4 +174,45 @@ p {
     padding: 24px;
   }
 }
-        
+    
+
+#projctr  {
+    margin-top: 25px;
+    font-size: 21px;
+    text-align: center;
+  
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
+  }
+  
+  @keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+  }
+  
+  /* Firefox < 16 */
+  @-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+  }
+  
+  /* Safari, Chrome and Opera > 12.1 */
+  @-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+  }
+  
+  /* Internet Explorer */
+  @-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+  }
+  
+  /* Opera < 12.1 */
+  @-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+  }
