--- a/src/components/Socials/style.css
+++ b/src/components/Socials/style.css
@@ -23,12 +23,14 @@ body {
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
+    width: 50px;
+    height: 50px;
     letter-spacing: 2px;
     color: #5a84a2;
     font-size: 11px;
     flex-wrap: wrap;
     justify-content: center;
-
+    
     background: linear-gradient(145deg, #ecedef, #f3f6f6);
     box-shadow: 3px 6px 10px #d3cece, -3px -6px 10px #ffffff
 }
