--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ body {
   
 }
 
+#root {
+  box-sizing: border-box;
+    margin: auto;
+    padding: 0;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
