--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,3 +1,7 @@
+
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,700,900,400italic,700italic,900italic);
+
+
 nav-item {
     position: relative;
 }
@@ -37,16 +41,7 @@ neo-button {
     margin: 10px;
 }
 
-h1 {
-    letter-spacing: 5rem;
-    text-transform: uppercase;
-    font-weight: 500;
-    padding: 30px;
-    margin: 20px;
-    color: #11191e;
-    text-decoration: none;
-    list-style: none;
-}
+
 
 #brand {
     text-decoration: none;
@@ -55,3 +50,24 @@ h1 {
 #link {
     text-decoration: none;
 }
+
+.title-word {
+    font: 16px/1.25 'Raleway', sans-serif;
+    font-weight: 800;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font-size: 3em;
+    padding: 5px;
+
+  }
+
+  
+  .title-word-1 {
+    --color-1: #515050;
+
+  }
+  
+#dowdy {
+    color: #454444;
+ 
+  }
