--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -1,4 +1,7 @@
 
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,700,900,400italic,700italic,900italic); 
+
+
 .viewFive {
    
     width: 100%;
@@ -7,7 +10,10 @@
     margin-top: -10vh;
 }
 
-
+h1 {
+  font: 16px/1.25 'Raleway', sans-serif;
+  margin-top: 10px;
+}
 
 #contactTitle {
     padding-bottom: 2vh;
