--- a/src/components/Navigation/style.css
+++ b/src/components/Navigation/style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,700,900,400italic,700italic,900italic); 
+
 #pages {
     opacity: .7;
 }
@@ -45,5 +47,8 @@
 #title {
     letter-spacing: 2px;
     text-transform: uppercase;
-    font-weight: 500;
+    font: 20px/1.25 'Raleway', sans-serif;
+
+    text-transform: uppercase;
+    font-weight: 700;
 }
