--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,3 +1,5 @@
+
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -56,6 +58,7 @@ width: 100%;
     padding: 5px;
     margin: 20px;
     width: 100px;
+    background-color: #c7c4c4;
 }
 
 .pad button:hover {
@@ -70,10 +73,18 @@ width: 100%;
     flex-wrap: wrap;
     padding: 15px;
     justify-content: center;
-    box-shadow: 3px 6px 13px #e4e4e4, -6px -6px 20px #fbfbfb;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 35px;
     border-radius: 12px;
 }
 
+#text {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.display-7 {
+    font-family: Arial, Helvetica, sans-serif; 
+}
 
 .boxy {
     position: center;
