--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,5 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  
+html, body, #app, #app>div {
+  height: 100%
 }
 
 #root {
@@ -14,6 +8,9 @@ body {
     padding: 0;
 }
 
+[role=navigation] {
+  overflow: auto !important
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
