--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -3,12 +3,15 @@
 
 
   body {
-    box-sizing: border-box;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
-    height: 100%
+
   }
 
+  #aaa {
+      min-height: 100vh;
+  }
 li {
     list-style: none;
 }
@@ -32,7 +35,7 @@ align-self-center container-fluid {
     align-items: center;
 }
 row {
-    display: flex;
+
   flex-wrap: wrap;
   align-items: center;
 justify-content: center;
@@ -46,8 +49,7 @@ width: 100%;
     flex-wrap: wrap;
     justify-content: center;
     background-color:rgb(250, 250, 250);
-    background-size: cover;
-    height: 100%;
+    top: 15%;
     width: 100%;
 }
 
@@ -126,21 +128,19 @@ width: 100%;
 }
 
 #abt {
-    position: absolute;
+
 
     justify-content: center;
     background-color: rgb(255, 255, 255);
 
-    top: 35%;
- 
+    top: 15%;
 }
 
 
 
 .container {
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+
     margin-right: auto;
     margin-left: auto;
 }
@@ -192,7 +192,7 @@ width: 100%;
 }
 
 #abtctr  {
-    margin-top: 25px;
+    margin-top: 25%;
     font-size: 21px;
     text-align: center;
   
@@ -201,6 +201,15 @@ width: 100%;
         -ms-animation: fadein 2s; /* Internet Explorer */
          -o-animation: fadein 2s; /* Opera < 12.1 */
             animation: fadein 2s;
+  }
+
+
+
+  @media (max-width:600px) {
+      .display-7 {
+          font-size: 50px;
+      }
+      
   }
   
   @keyframes fadein {
