--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -39,7 +39,9 @@ h3 {
 }
 
 #contact  {
-    margin-top: 25px;
+    margin-top: 20%;
+    padding: 10%;
+
     font-size: 21px;
     text-align: center;
   
