--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -1,187 +1,30 @@
 @import url(https://fonts.googleapis.com/css?family=Calibri:400,300,700);
 
-grid-container {
-   
-    background-color: #d8d5d5;
-    padding: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-#contain {
-    flex-wrap: wrap;
-    justify-content: center;
-
-    background-size: contain;
-    align-items: center;
-    min-height: 100vh;
-  min-width: 100vw;
-}
-
-.neo-button repoLink {
-    margin-top: 10px;
-    padding: 10px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    color: lightblue;
-}
-
-.neo-button button {
-    margin: 10px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 70px;
-    height: 35px;
-
-}
-
-#projs {
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-.col 
-
-    {
-        display: flex;
-        width: 73%;
-        justify-content:center;
-        margin:0 auto;
-    }
-
-.row {
-    flex-wrap: wrap;
-    padding: 0px;
-    justify-content: center;
-}
-
-.card img {
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-proj img {
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 60px;
-    height: 35px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-
-
-}
-
-
-.neo-button {
-    width: 70px;
-    height: 35px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    color: rgb(157, 159, 163);
-    border-radius: 11px;
-    background: linear-gradient(145deg, #e3e5e9, #eaf1f1);
-    box-shadow: 3px 6px 13px #d3cece, -6px -6px 10px #fcf8f8
-}
-
-.row > div {
-    
- margin: auto;
-    
-  justify-content: center;
-    
-
-  }
-
-
-.neo-button:hover {
-    width: 70px;
-    height: 35px;
-    border: none;
-    outline: none;
-    color: rgb(111, 112, 114);
-    border-radius: 11px;
-    background: linear-gradient(145deg, #dbe0e0, #f6f8fa);
-    box-shadow: 3px 6px 13px #f3f1f1, -6px -6px 10px #f1ecec
-}
-
-#pp {
-    width: 80px;
-    height: 45px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    color: rgb(111, 112, 114);
-    border-radius: 11px;
-    background: linear-gradient(145deg, #f1eeee, #faf8f8);
-    box-shadow: 6px 6px 13px #e2e2e4, -3px -3px 13px #e6dfdf
-}
-
-#pp:hover {
-    width: 80px;
-    height: 45px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    color: rgb(111, 112, 114);
-    border-radius: 11px;
-    background: linear-gradient(145deg, #e4e1e1, #eff3f3);
-    box-shadow: 6px 6px 13px #f8f6f6, -6px -6px 13px #f1eeee
-}
-
-.neo-button .fa {
-    color: rgb(166, 166, 173)
-}
-
-
-ul {
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-}
-
-.proj {
-    border-radius: 11px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
 h3 {
-  padding: 50px;
+        font-size: 40px;
+        padding: 3%;
 }
 
-.container card {
-    background-color: #c7cece;
+#project {
+    width: 15rem;
+    height: 20rem;
+  
+}
+
+
+#rid {
+    margin: 5%;
+}
+
+
+#project {
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    margin: auto;
 }
 
-p {
-    margin: 3px;
-    padding: 3px;
-}
-
-row  {
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-}
-
-
-
-@media (min-width: 768px) {
-  .button-67 {
-    padding: 24px;
-  }
-}
-    
-
-#projctr  {
-    margin-top: 25px;
+ .contain {
+    margin-top: 25%;
     font-size: 21px;
     text-align: center;
   
@@ -190,6 +33,15 @@ row  {
         -ms-animation: fadein 2s; /* Internet Explorer */
          -o-animation: fadein 2s; /* Opera < 12.1 */
             animation: fadein 2s;
+  }
+
+
+
+  @media (max-width:600px) {
+      .display-7 {
+          font-size: 50px;
+      }
+      
   }
   
   @keyframes fadein {
@@ -220,3 +72,9 @@ row  {
     from { opacity: 0; }
     to   { opacity: 1; }
   }
+
+
+
+
+
+
