--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -24,7 +24,7 @@ header {
 html, body >div {
     height: 100%;
   
-    background-color: #fffefe;
+    background-color: #ffffff;
     margin: 0px;
 
 
