--- a/src/components/Loading/style.css
+++ b/src/components/Loading/style.css
@@ -31,6 +31,7 @@
       display: flex;
     justify-content: center;
       align-items: center;
+      background-color: rgb(255, 255, 255);
   }
 
   #col {
