--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,700,900,400italic,700italic,900italic); 
 
 .display-6 {
-  font: 20px/1.25 'Raleway', sans-serif;
+  font: 18px/1.25 'Raleway', sans-serif;
   font-weight: 600;
   opacity: .8;
   line-height: 20px;
@@ -25,7 +25,7 @@ h1 {
 }
 
 h3 {
-  font: 90px/1.25 'Raleway', sans-serif;
+  font: 20px/1.25 'Raleway', sans-serif;
 
   font-weight: 900;
 }
@@ -38,8 +38,11 @@ h3 {
     margin-top: 10vh;
 }
 
+#sax {
+  margin-top: 50px;
+}
 #contact  {
-    margin-top: 20%;
+
     padding: 10%;
 
     font-size: 21px;
